--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-
+        <title>WATCH THIS VIDEO... NOW!</title>
     </head>
     <body>
         <link rel="stylesheet" href="style.css">
         <center>
-            <h1>WELCOME TO MAPLE SHADE LOVERS SITE!</h1>
+            <h1>WELCOME TO MAPLE SHADE LAUGHERS SITE!</h1>
             <h3>The place for all maple shade lovers.</h3>
         </center>
         <img src="./img/ma_leshade.jpg" width="300px">
